--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/ekko-lightbox.js"></script>
+    <script type="text/javascript">
+      $(window).load(function(){
+        var img = new Image();
+        img.src = '/images/doors-bright.jpg';
+      });
+    </script>
 
     <script src="/angular/angular.min.js"></script>
     <script src="/angular/angular-ui-router.min.js"></script>
